--- a/src/app/module/invoice/invoice-details/invoice-details.component.html
+++ b/src/app/module/invoice/invoice-details/invoice-details.component.html
@@ -1,83 +1,98 @@
-<div class="invoice-box">
-    <table cellpadding="0" cellspacing="0">
-      <tr class="top">
-        <td colspan="2">
-          <table>
-            <tr>
-              <td class="title">
-                <img src="https://www.sat.gob.mx/favicon.ico" style="width:100%; max-width:150px;">
-              </td>
-              <td>
-                Factura #: {{ invoiceDetails.invoice_id}}<br>
-                Fecha: {{ invoiceDetails.created_at }}<br>
-                Folio: {{ folio }}
-              </td>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Invoice</title>
+    <link href="invoice-details.component.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="invoice-box">
+        <table cellpadding="0" cellspacing="0">
+            <tr class="top">
+                <td colspan="2">
+                    <table>
+                        <tr>
+                            <td class="title">
+                                <img src="https://www.sat.gob.mx/favicon.ico" style="width:100%; max-width:150px;">
+                            </td>
+                            <td>
+                                Factura #: {{ invoiceDetails.invoice_id}}<br>
+                                Fecha: {{ invoiceDetails.created_at }}<br>
+                                Folio: {{ folio }}
+                            </td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
-          </table>
-        </td>
-      </tr>
-      <tr class="information">
-        <td colspan="2">
-          <table>
-            <tr>
-              <td>
-                SAT<br>
-                RFC: SAT123456789<br>
-                Dirección: Av. Hidalgo 77, Col. Guerrero, Del. Cuauhtémoc, Ciudad de México, 06300
-              </td>
-              <td>
-
-                RFC: {{ invoiceDetails.rfc }}<br>
-
-              </td>
+            <tr class="information">
+                <td colspan="2">
+                    <table>
+                        <tr>
+                            <td>
+                                SAT<br>
+                                RFC: SAT123456789<br>
+                                Dirección: Av. Hidalgo 77, Col. Guerrero, Del. Cuauhtémoc, Ciudad de México, 06300
+                            </td>
+                            <td>
+                                RFC: {{ invoiceDetails.rfc }}<br>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
-          </table>
-        </td>
-      </tr>
-      <tr class="heading">
-        <td>
-          Método de pago
-        </td>
-        <td>
-          # de cuenta
-        </td>
-      </tr>
-      <tr class="details">
-        <td>
-          Tarjeta de crédito
-        </td>
-        <td>
-          1234 5678 9012 3456
-        </td>
-      </tr>
-      <tr class="heading">
-        <td>
-          Producto
-        </td>
-        <td>
-          Precio
-        </td>
-      </tr>
-      <tr class="item" *ngFor="let item of invoiceDetails.items">
-        <td>
-          {{ item.gtin }} (x{{ item.quantity }})
-        </td>
-        <td>
-          ${{ item.unit_price  }}
-        </td>
-      </tr>
-      <tr class="total">
-        <td></td>
-        <td>
-          Subtotal: ${{ subtotal  }}
-        </td>
-      </tr>
-      <tr class="total">
-        <td></td>
-        <td>
-          Total: ${{ invoiceDetails.total  }}
-        </td>
-      </tr>
-    </table>
-  </div>
-  
+            <tr class="heading">
+                <td>
+                    Método de pago
+                </td>
+                <td>
+                    # de cuenta
+                </td>
+            </tr>
+            <tr class="details">
+                <td>
+                    Tarjeta de crédito
+                </td>
+                <td>
+                    1234 5678 9012 3456
+                </td>
+            </tr>
+            <tr class="heading">
+                <td>
+                    Producto
+                </td>
+                <td>
+                    Precio
+                </td>
+            </tr>
+            <tr class="item" *ngFor="let item of invoiceDetails.items">
+                <td>
+                    {{ item.gtin }} (x{{ item.quantity }})
+                </td>
+                <td>
+                    ${{ item.unit_price  }}
+                </td>
+            </tr>
+            <tr class="total">
+                <td></td>
+                <td>
+                    Subtotal: ${{ subtotal  }}
+                </td>
+            </tr>
+            <tr class="total">
+                <td></td>
+                <td>
+                    Total: ${{ invoiceDetails.total  }}
+                </td>
+            </tr>
+            <tr class="qr">
+                <td colspan="2" class="text-center">
+                    <img src="assets/images/qr.png" alt="QR Code" style="width:150px; height:150px;">
+                </td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
