--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -1,105 +1,90 @@
 <nav class="navbar navbar-expand-lg navbar-custom" data-bs-theme="dark">
   <div class="container-fluid navbar-content">
-      <!-- logo -->
-      <a class="navbar-brand" href="/">
-          <p>MAD</p>
-      </a>
+    <!-- logo -->
+    <a class="navbar-brand" href="/">
+      <p>MAD</p>
+    </a>
 
-    <!-- responsive button  -->
-      
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- responsive button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
     <!-- menu options -->
-      
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
         <!-- categories -->
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categorias</a>
           <div class="dropdown-menu nav-dropdown-menu">
-              @for(category of categories; track category) {
-                  <a class="dropdown-item nav-dropdown-item" [routerLink]="['/producto/categoria', category.category_id]">{{ category.category }}</a>
-              }
+            <a class="dropdown-item nav-dropdown-item" *ngFor="let category of categories" [routerLink]="['/producto/categoria', category.category_id]">{{ category.category }}</a>
           </div>
-      </li>
+        </li>
 
-      
         <!-- admin -->
+        <li class="nav-item dropdown" *ngIf="isAdmin">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administración</a>
+          <div class="dropdown-menu nav-dropdown-menu">
+            <a class="dropdown-item nav-dropdown-item" routerLink="/categoria">Categorías</a>
+            <a class="dropdown-item nav-dropdown-item" routerLink="/product">Productos</a>
+            <a class="dropdown-item nav-dropdown-item" routerLink="/facturas">Facturas</a>
+          </div>
+        </li>
+      </ul>
 
-          @if (isAdmin) {
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administración</a>
-              <div class="dropdown-menu nav-dropdown-menu">
-                <a class="dropdown-item nav-dropdown-item" routerLink="/categoria">Categorías</a>
-                <a class="dropdown-item nav-dropdown-item" routerLink="/product">Productos</a>
-                <a class="dropdown-item nav-dropdown-item" routerLink="/facturas">Facturas</a>
-              </div>
-            </li>
-          }
-
-        </ul>
-
-        <!-- search bar  -->
-
-        <form class="d-flex search-form">
-          <input class="form-control me-sm-2 search-input" type="search" placeholder="Buscar">
-          <button class="btn search-button" type="submit">
-              <i class="bi bi-search"></i>
-          </button>
+      <!-- search bar -->
+      <form class="d-flex search-form">
+        <input class="form-control me-sm-2 search-input" type="search" placeholder="Buscar">
+        <button class="btn search-button" type="submit">
+          <i class="bi bi-search"></i>
+        </button>
       </form>
-      
-        <!-- shopping cart  -->
 
-        @if (loggedIn) {
-          <a class="nav-link" routerLink="carrito" role="button">
-            <i class="ph ph-shopping-cart i-cart"></i>
-          </a>
-        }@else {
-          <ul class="navbar-nav">
-            <a class="nav-link nav-register" (click)="showRegisterModal()">Registrarse</a>
-          </ul>
-        }
-
-    
-
-        <!-- user information  -->
-       
-        <ul class="navbar-nav">
-
-            @if(loggedIn){
-              <li class="nav-item dropdown user-information">
-  
-                <!-- user logo  -->
-   
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                  <img class="img-profile rounded-circle nav-user-img" src="assets/images/user-logo.png">
-                </a>
-   
-                <!-- user options -->
-   
-                <div class="dropdown-menu nav-dropdown-menu nav-dropdown-menu-user">
-                    <a class="dropdown-item nav-dropdown-item" routerLink="#">Perfil</a>
-                    <a class="dropdown-item nav-dropdown-item" routerLink="#">Configuración</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item nav-dropdown-item" (click)="logout()">Cerrar sesión</a>
-                </div>
-              </li>
-            }@else {
-              <a class="nav-link" (click)="showLoginModal()">Iniciar sesión</a>
-            }
-  
-  
-          </ul>
+      <!-- shopping cart -->
+      <div class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarCartDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="ph ph-shopping-bag i-cart"></i> ({{ totalItems }})
+        </a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarCartDropdown">
+          <li *ngIf="cartItems.length === 0">
+            <span class="dropdown-item">Tu carrito está vacío</span>
+          </li>
+          <li *ngFor="let item of cartItems" class="dropdown-item d-flex justify-content-between align-items-center">
+            <div class="item-details">
+              <h6>{{ item.product.product }}</h6>
+              <p>{{ item.quantity }} x ${{ item.product.price }}</p>
+            </div>
+            <img [src]="item.image" alt="{{ item.product.product }}" class="img-thumbnail">
+          </li>
+          <li><hr class="dropdown-divider"></li>
+          <li class="dropdown-item text-center">
+            <button class="btn btn-primary" routerLink="/carrito">Ver carrito</button>
+          </li>
+        </ul>
       </div>
+
+      <!-- user information -->
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown user-information" *ngIf="loggedIn">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="ph ph-user"></i>
+          </a>
+          <div class="dropdown-menu nav-dropdown-menu nav-dropdown-menu-user">
+            <a class="dropdown-item nav-dropdown-item" routerLink="#">Perfil</a>
+            <a class="dropdown-item nav-dropdown-item" routerLink="#">Configuración</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item nav-dropdown-item" (click)="logout()">Cerrar sesión</a>
+          </div>
+        </li>
+        <li *ngIf="!loggedIn">
+          <a class="nav-link" (click)="showLoginModal()">Iniciar sesión</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-<!-- Login modal  -->
-
+<!-- Login modal -->
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="loginModal">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
@@ -108,18 +93,14 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-
-          <!-- Login component  -->
-          
-          <app-login></app-login>
-          
+        <!-- Login component -->
+        <app-login></app-login>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Register modal  -->
-
+<!-- Register modal -->
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="registerModal">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
@@ -128,11 +109,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-
-          <!-- Register component  -->
-          
-           <app-register (registerEvent)="handleRegistrationSuccess($event)"></app-register> 
-          
+        <!-- Register component -->
+        <app-register (registerEvent)="handleRegistrationSuccess($event)"></app-register>
       </div>
     </div>
   </div>
