--- a/src/app/module/product/component/ProductosPorCategoria/maquillaje.component.css
+++ b/src/app/module/product/component/ProductosPorCategoria/maquillaje.component.css
@@ -5,12 +5,12 @@
 }
 
 .btn-cart {
-  background-color: #007bff;
+  background-color: #535353;
   color: white;
 }
 
 .btn-cart:hover {
-  background-color: #0056b3;
+  background-color: #999999;
 }
 
 .text-danger {
