margin a un boton

--- a/src/app/module/cart/cart.component.html
+++ b/src/app/module/cart/cart.component.html
@@ -26,7 +26,7 @@
         <h3>Subtotal: ${{ subtotal }}</h3>
         <!-- <h3>Envío: ${{ shippingCost }}</h3>
         <h3>Total: ${{ total }}</h3> -->
-        <button (click)="openBuyModal()" class="btn btn-success">Comprar</button>
+        <button (click)="openBuyModal()" class="btn btn-success btncompra">Comprar</button>
         <button (click)="deleteCart()" class="btn btn-danger">Vaciar Carrito</button>
       </div>
     </div>
