--- a/src/app/module/cart/cart.component.css
+++ b/src/app/module/cart/cart.component.css
@@ -1,26 +1,35 @@
 .quantity-input {
-    width: 50px;
-    text-align: center;
-  }
-  
-  .btn-small {
-    padding: 0.25rem 0.5rem;
-  }
-  
+  width: 50px;
+  text-align: center;
+}
 
-  .resumen-precios h3 {
-    font-size: 1.25rem; /* Ajusta el tamaño de la fuente según sea necesario */
-    font-weight: normal; /* Opcional: ajusta el peso de la fuente si es necesario */
+.btn-small {
+  padding: 0.25rem 0.5rem;
+}
+
+
+.resumen-precios h3 {
+  font-size: 1.25rem;
+  /* Ajusta el tamaño de la fuente según sea necesario */
+  font-weight: normal;
+  /* Opcional: ajusta el peso de la fuente si es necesario */
 }
 
 .modal-body p {
-    font-size: 1rem; /* Ajusta el tamaño de la fuente según sea necesario */
-    font-weight: normal; /* Opcional: ajusta el peso de la fuente si es necesario */
+  font-size: 1rem;
+  /* Ajusta el tamaño de la fuente según sea necesario */
+  font-weight: normal;
+  /* Opcional: ajusta el peso de la fuente si es necesario */
 }
+
 .i-cart {
   color: rgb(0, 0, 0);
   font-size: 28px;
   vertical-align: middle;
   margin-right: 8px;
   margin-left: 24px;
+}
+
+.btncompra {
+  margin-right: 10px;
 }
